2006-08-08  Mike Cvet  <mcvet@redhat.com>

	* actions/RunExternal.java (RunExBlocker): Added.
	(TaskTerminatedObserver.updateTerminated): Updated to unblock the examined task when finished.
	(AttachedObserver.updateAttached): Requests a Terminating Observer on the external process.
	(execute): Creates a new RunExBlocker and requests it to attach to the incoming Task.

2006-08-08  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/TaskObserverRoot.java: Added unapply(Proc).
	added abstrace unapply(Task).
	* observers/TaskCloneObserver.java: Implemented unapply(Task).
	* observers/TaskTerminatingObserver.java: Ditto.
	* observers/TaskSyscallObserver.java: Ditto.
	* observers/TaskForkedObserver.java: Ditto.
	* observers/TaskExecObserver.java: Ditto.
	* WindowManager.java: Added programObserver dialog to the list
	of windows and to save/load.
	* SessionProcDataModel.java: Added handling for updating
	the list when new procs are added to the underlying DebugProcess.
	* MenuBar.java: Added quitFryk menu item.
	Removed editCustomObservers menu item.
	* GuiProc.java (isOwned): Added explicit check for getExec.
	* CheckedListView.java: Added getCheckedByName.
	Added getCheckObjects.
	* ListView (getSelectedObjects): Changed it to return a list
	instead of iterator.

2006-08-04  Mike Cvet  <mcvet@redhat.com>

	* actions/RunExternal.java (execute): Removed existence check.
	(setArgument): Moved above check to here; thus preventing continuation
	of observer customization in the case of an incorrect argument.
	* ObserverItemRow.java (apply): Check to see if the argument
	setting failed. Now returns boolean. Applied GNU formatting.
	(getOffendingArg): Added.
	* EditObserverDialog.java (.buttonEvent): Check for failed
	argument setting and print an error if something is wrong.
	* ObserverItemsTable.java (apply): Made a check for failed 
	argument setting. Also applied GNU formatting. Now returns a boolean.
	(getOffendingArg): Added.
	* ActionsTable.java: Applied GNU formatting.